test/parser/error_recovery_eof.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
// CHECK: [[# @LINE + 1 ]]:16: error: expected type expression
fn error1() -> {
